--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 11)
 
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
@@ -9,17 +9,19 @@ set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror")
 set(CMAKE_CXX_FLAGS_DEBUG "-g")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
-project(SweatCI VERSION 0.4.2 LANGUAGES CXX)
+project(SweatCI VERSION 0.0.1 LANGUAGES CXX)
 
 option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
 
+file(GLOB SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp)
+
 if(BUILD_SHARED_LIBS)
-    add_library(SweatCI SHARED SweatCI.cpp)
+    add_library(SweatCI SHARED ${SOURCES})
     set_target_properties(SweatCI PROPERTIES VERSION ${PROJECT_VERSION} POSITION_INDEPENDENT_CODE 1)
 else()
-    add_library(SweatCI STATIC SweatCI.cpp)
+    add_library(SweatCI STATIC ${SOURCES})
 endif()
 
-target_include_directories(SweatCI PRIVATE ${PROJECT_SOURCE_DIR}) # SweatCI.h
+target_include_directories(SweatCI PRIVATE ${PROJECT_SOURCE_DIR})
 
 add_subdirectory(${PROJECT_SOURCE_DIR}/example)
