--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable(Example ${PROJECT_SOURCE_DIR}/example/src/example.cpp)
 
 target_include_directories(Example PRIVATE ${PROJECT_SOURCE_DIR}/src)
-target_link_libraries(Example SweatCI)
+target_link_libraries(Example NikiScript)
