--- a/example/cfg/variables.cfg
+++ b/example/cfg/variables.cfg
@@ -2,10 +2,10 @@ var !da "echo da"
 
 var +a "echo +a called!"
 var -a "echo -a called!"
-var a "+a; -a"
+var (a, +a; -a) // there is also this method to call commands
 
 echo !da = ${!da}
 
-var (b, echo there is also this method to call commands!; echo +a = \"\${+a}\"; var (+a, echo +a got modified by b!! hahahaha; echo get lost nob); echo +a = \"\${+a}\")
+var (b, echo +a = \"\${+a}\"; var (+a, echo +a got modified by b!! hahahaha; echo get lost nob); echo +a = \"\${+a}\")
 
 echo "\"a\" = \"${a}\""
