update cfg examples

--- a/example/cfg/semicolon.cfg
+++ b/example/cfg/semicolon.cfg
@@ -1,1 +1,2 @@
-echo "this; works"; echo this doesn't
+echo "this; works"; this_does_not
+echo (this; also works, great by the way); this_does_not_2
