--- a/example/cfg/variables.cfg
+++ b/example/cfg/variables.cfg
@@ -8,6 +8,6 @@ echo !da = ${!da}
 
 var (b, echo +a = \"\${+a}\"; var (+a, echo +a got modified by b!! hahahaha; echo get lost nob); echo +a = \"\${+a}\")
 
-test "var t b; var t_double var t $\\{t} \\${t}; t_double; t_double; echo \${t}"
+test "var t haii; var t_double var t \\\${t} \\\${t}; t_double; t_double; t_double; echo \${t}" 
 
 echo "\"a\" = \"${a}\""
