--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ project(NikiScript VERSION 0.0.1 LANGUAGES CXX)
 
 option(BUILD_64BITS "x64 or x86" ON)
 option(BUILD_SHARED "Whether make it shared or static" ON)
+option(BUILD_EXPORT "Whether dllexport/dllimport or not" OFF)
 
 if (BUILD_64BITS)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64")
@@ -20,12 +21,23 @@ endif()
 
 file(GLOB SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp)
 
+if (BUILD_EXPORT)
+	set(JIKARU_COMPILE_DEFINITIONS ${JIKARU_COMPILE_DEFINITIONS} BUILD_EXPORT=1)
+endif()
+
 if(BUILD_SHARED)
-    add_library(NikiScript SHARED ${SOURCES})
-    set_target_properties(NikiScript PROPERTIES VERSION ${PROJECT_VERSION} POSITION_INDEPENDENT_CODE ON)
+	add_library(NikiScript SHARED ${SOURCES})
+	set_target_properties(NikiScript PROPERTIES VERSION ${PROJECT_VERSION} POSITION_INDEPENDENT_CODE ON)
+
+	set(JIKARU_COMPILE_DEFINITIONS ${JIKARU_COMPILE_DEFINITIONS} BUILD_SHARED=1)
+	target_compile_definitions(NikiScript PRIVATE ${JIKARU_COMPILE_DEFINITIONS})
 else()
     add_library(NikiScript STATIC ${SOURCES})
+
+	set(JIKARU_COMPILE_DEFINITIONS ${JIKARU_COMPILE_DEFINITIONS} BUILD_SHARED=0)
+	target_compile_definitions(NikiScript PRIVATE ${JIKARU_COMPILE_DEFINITIONS})
 endif()
+
 
 target_include_directories(NikiScript PRIVATE ${PROJECT_SOURCE_DIR})
 
