--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable(Example ${PROJECT_SOURCE_DIR}/example/src/example.cpp)
 
-file(COPY ${PROJECT_SOURCE_DIR}/example/cfg DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY ${PROJECT_SOURCE_DIR}/example/data/cfg DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/data)
 
 target_include_directories(Example PRIVATE ${PROJECT_SOURCE_DIR}/src)
 target_link_libraries(Example NikiScript)
