--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,12 +12,12 @@ option(BUILD_SHARED "Whether make it shared or static" OFF)
 
 if(MSVC)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX")
-	set(CMAKE_CXX_FLAGS_DEBUG "/Zi")
-	set(CMAKE_CXX_FLAGS_RELEASE "/O2")
+	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /Zi")
+	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /O2")
 else()
-	set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror")
-	set(CMAKE_CXX_FLAGS_DEBUG "-g")
-	set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")
+	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
+	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
 
 	option(BUILD_64BITS "x64 or x86" ON)
 	if(BUILD_64BITS)
@@ -38,6 +38,20 @@ else()
 endif()
 
 set_target_properties(NikiScript PROPERTIES PREFIX "")
+
+if (MSVC)
+	if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+		set(NIKISCRIPT_SUFFIX "-d")
+	elseif (CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
+		set(NIKISCRIPT_SUFFIX "-rd")
+	endif()
+
+	if (BUILD_SHARED)
+		set_target_properties(NikiScript PROPERTIES SUFFIX "${NIKISCRIPT_SUFFIX}.dll")
+	else()
+		set_target_properties(NikiScript PROPERTIES SUFFIX "${NIKISCRIPT_SUFFIX}.lib")
+	endif()
+endif()
 
 target_include_directories(NikiScript PRIVATE ${PROJECT_SOURCE_DIR}/include/NikiScript)
 
