improved cmake for MSVC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,14 +39,20 @@ endif()
 
 set_target_properties(NikiScript PROPERTIES PREFIX "")
 
-if (MSVC)
-	if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+if(MSVC)
+	if(CMAKE_BUILD_TYPE STREQUAL "Debug")
 		set(NIKISCRIPT_SUFFIX "-d")
-	elseif (CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
+	elseif(CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
 		set(NIKISCRIPT_SUFFIX "-rd")
+	elseif(CMAKE_BUILD_TYPE STREQUAL "MinSizeRel")
+		set(NIKISCRIPT_SUFFIX "-min")
 	endif()
 
-	if (BUILD_SHARED)
+	if(CMAKE_SIZEOF_VOID_P STREQUAL 8)
+		set(NIKISCRIPT_SUFFIX "64${NIKISCRIPT_SUFFIX}")
+	endif()
+
+	if(BUILD_SHARED)
 		set_target_properties(NikiScript PROPERTIES SUFFIX "${NIKISCRIPT_SUFFIX}.dll")
 	else()
 		set_target_properties(NikiScript PROPERTIES SUFFIX "${NIKISCRIPT_SUFFIX}.lib")
